Add SVG to PNG benchmark implementation and update references
- Implemented a new benchmark for SVG to PNG conversion using JairoSVG, EchoSVG, and CairoSVG in `comparison/benchmark.java`.
- Updated `jbang-catalog.json` to reference the new benchmark script location.
- Modified documentation in `benchmark.md` to reflect the new path of the benchmark script.